Replaced most URL calls for HttpClients
Signed-off-by: dumbdemon <20498145+dumbdemon@users.noreply.github.com>