@@ -18,9 +18,7 @@ import org.slf4j.LoggerFactory;
 import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
-import java.net.HttpURLConnection;
 import java.net.URI;
-import java.net.URL;
 import java.net.http.HttpClient;
 import java.net.http.HttpRequest;
 import java.net.http.HttpResponse;
@@ -133,8 +131,8 @@ public class KitsuHandler {
      * @throws IOException If an i/o exception occurs
      */
     public MangaKitsuData getManga(@NotNull String search) throws IOException {
-        URL manga = new URL(BASE_URL + "manga?filter%5Btext%5D=" + search.toLowerCase().replaceAll(" ", "%20"));
-        return MAPPER.readValue(getInputStreamOf(manga), MangaKitsuData.class);
+        URI manga = URI.create(BASE_URL + "manga?filter%5Btext%5D=" + search.toLowerCase().replaceAll(" ", "%20"));
+        return MAPPER.readValue(getResponseBody(manga), MangaKitsuData.class);
     }
 
     /**
@@ -145,8 +143,8 @@ public class KitsuHandler {
      * @throws IOException If an i/o exception occurs
      */
     public AnimeKitsuData getAnime(@NotNull String search) throws IOException {
-        URL anime = new URL(BASE_URL + "anime?filter%5Btext%5D=" + search.toLowerCase().replaceAll(" ", "%20"));
-        return MAPPER.readValue(getInputStreamOf(anime), AnimeKitsuData.class);
+        URI anime = URI.create(BASE_URL + "anime?filter%5Btext%5D=" + search.toLowerCase().replaceAll(" ", "%20"));
+        return MAPPER.readValue(getResponseBody(anime), AnimeKitsuData.class);
     }
 
     /**
@@ -157,32 +155,42 @@ public class KitsuHandler {
      * @throws IOException If an i/o exception occurs
      */
     public CategoriesKitsuData getCategories(@NotNull Relationships relationships) throws IOException {
-        URL genres = new URL(relationships.getCategories().getLinks().getRelated());
-        return MAPPER.readValue(getInputStreamOf(genres), CategoriesKitsuData.class);
+        URI genres = URI.create(relationships.getCategories().getLinks().getRelated());
+        return MAPPER.readValue(getResponseBody(genres), CategoriesKitsuData.class);
     }
 
     /**
      * Get the {@link InputStream} for Kitsu.io.
      *
-     * @param url A Kitsu.io API endpoint URL
+     * @param uri A Kitsu.io API endpoint URL
      * @return An {@link InputStream}
-     * @throws IOException If the URL is bad or the {@link InputStream} could not obtained.
      */
     @NotNull
-    private InputStream getInputStreamOf(@NotNull URL url) throws IOException {
-        HttpURLConnection kitsuConnection = (HttpURLConnection) url.openConnection();
-        kitsuConnection.addRequestProperty("Accept", "application/vnd.api+json");
-        if (token != null)
-            kitsuConnection.addRequestProperty("Authorization", token);
-        switch (kitsuConnection.getResponseCode()) {
-            case 200 -> {
-                return kitsuConnection.getInputStream();
+    private InputStream getResponseBody(@NotNull URI uri) {
+        try (ExecutorService service = Executors.newSingleThreadExecutor()) {
+            HttpClient client = HttpClient.newBuilder()
+                .followRedirects(HttpClient.Redirect.ALWAYS)
+                .connectTimeout(Duration.ofSeconds(5))
+                .executor(service)
+                .build();
+            HttpRequest.Builder request = HttpRequest.newBuilder(uri)
+                .setHeader("Accept", "application/vnd.api+json");
+            if (token != null)
+                request.setHeader("Authorization", token);
+
+            HttpResponse<InputStream> response = client.send(request.build(), HttpResponse.BodyHandlers.ofInputStream());
+            switch (response.statusCode()) {
+                case 200 -> {
+                    return response.body();
+                }
+                case 400 -> throw new IllegalArgumentException("Bad Request - malformed request");
+                case 401 -> throw new IOException("Unauthorized - invalid or no authentication details provided");
+                case 404 -> throw new IOException("Not Found - resource does not exist");
+                case 406 -> throw new IllegalArgumentException("Not Acceptable - invalid Accept header");
+                default -> throw new IOException("Server Error");
             }
-            case 400 -> throw new IllegalArgumentException("Bad Request - malformed request");
-            case 401 -> throw new IOException("Unauthorized - invalid or no authentication details provided");
-            case 404 -> throw new IOException("Not Found - resource does not exist");
-            case 406 -> throw new IllegalArgumentException("Not Acceptable - invalid Accept header");
-            default -> throw new IOException("Server Error");
+        } catch (InterruptedException | IOException e) {
+            throw new RuntimeException("Unable to get response from Kistu.io", e);
         }
     }
 }
